# de-btc

./: .gitignore  README.md  btc.py  de.py  eada.py  main.py  pyproject.toml
ejemplo1/: capacidades.json  colegios.json  estudiantes.json  preferencias.json  prioridades.json
ejemplo2/: capacidades.json  colegios.json  estudiantes.json  preferencias.json  prioridades.json
ejemplo3/: capacidades.json  colegios.json  estudiantes.json  preferencias.json  prioridades.json
ejemplo4/: capacidades.json  colegios.json  estudiantes.json
example3Kesten/: capacidades.json  colegios.json  estudiantes.json  preferencias.json  prioridades.json
inputs/: capacidades.json  colegios.json  estudiantes.json  preferencias.json  prioridades.json
utils/: graph.py
