[tool.poetry]
name = "de+btcycle"
version = "0.1.0"
description = ""
authors = ["Fabricio <fabricio@deployr.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
pyqt6 = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
